--- a/Final.rmd
+++ b/Final.rmd
@@ -64,6 +64,14 @@ The most important information: among males who contracted covid19 67.78% of the
 
 #### Inferential Results 
 
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+The observed counts table shows the actual number of males who got covid and who didn't. Also the p-value is small meaning there is a statistical difference in the effect of the placebo and vaccine among males in preventing the infection. Males who took the placebo are about 2 times more likely to contract covid than those who took the vaccine based on the odds ratio value. 
+
 #### Efficacy of vaccine for males 
 
 
