--- a/Final.rmd
+++ b/Final.rmd
@@ -107,7 +107,8 @@ basicCC + geom_bar(stat="identity", position = "dodge")
 
 The bar plots above show graphical descriptive summaries of the effects of two treatments (covid19 vaccine and placebo) on females. At first glance, the vaccine appears to be working among females as the two plots show that more females who took the placebo contracted the disease. 
 
-#### Graphical Descriptive Results
+
+#### Numerical Descriptive Results 
 
 ```{r}
 table1 <- xtabs(~infected + treatment, data=Females)
@@ -117,7 +118,7 @@ colPerc(table1)
 
 The most important information: among females who contracted covid19 58.89% of them took the placebo, while 41.11% of them took the vaccine. A majority of the females who got covid took the placebo, therefore the vaccine seems to be working among the females.
 
-#### Numerical Descriptive Results 
+#### Inferential Results 
 
 ```{r}
 chisq.test(table1)
@@ -128,17 +129,25 @@ femalefisher
 
 The observed counts table shows the actual number of females who got covid and who didn't. Also the p-value is small meaning there is a statistical difference in the effect of the placebo and vaccine among females in preventing the infection. Females who took the placebo are about 2 times more likely to contract covid than those who took the vaccine based on the odds ratio value. 
 
-#### Inferential Results 
-
 #### Efficacy of vaccine for females
 
+```{r}
+EfficacyFemales<- ((2.092161/(1+2.092161)*100) )
+femalefisherlow<- femalefisher$conf.int[1]
+femalefisherhigh<- femalefisher$conf.int[2]
+EfficacyFemaleslow<-(femalefisherlow/(1+femalefisherlow)*100)
+EfficacyFemaleshigh<-(femalefisherhigh/(1+femalefisherhigh)*100)
+EfficacyFemales
+```
+
+Estimated efficacy of the vaccine among females. The 95% confidence interval of the vaccine efficacy among females from `r EfficacyFemaleslow` to `r EfficacyFemaleshigh`
 
 
 ## LGBTQ
 
-### Descriptive Results
-
 #### Graphical Descriptive Results
+
+
 
 #### Numerical Descriptive Results 
 
@@ -149,8 +158,6 @@ The observed counts table shows the actual number of females who got covid and w
 
 
 ## Druggies
-
-### Descriptive Results
 
 #### Graphical Descriptive Results
 
