--- a/Final.rmd
+++ b/Final.rmd
@@ -132,7 +132,7 @@ The observed counts table shows the actual number of females who got covid and w
 #### Efficacy of vaccine for females
 
 ```{r}
-EfficacyFemales<- ((2.092161/(1+2.092161)*100) )
+EfficacyFemales<- ((1.428903/(1+1.428903)*100) )
 femalefisherlow<- femalefisher$conf.int[1]
 femalefisherhigh<- femalefisher$conf.int[2]
 EfficacyFemaleslow<-(femalefisherlow/(1+femalefisherlow)*100)
@@ -147,15 +147,56 @@ Estimated efficacy of the vaccine among females. The 95% confidence interval of 
 
 #### Graphical Descriptive Results
 
+```{r}
+dd2 <- LGBTQ %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
 
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(dd2,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(dd2,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+The bar plots above show graphical descriptive summaries of the effects of two treatments (covid19 vaccine and placebo) on LGBTQ. At first glance, the vaccine appears to not be working among LGBTQ as the two plots show that less LGBTQ people did not take the placebo, yet a few did get covid. 
 
 #### Numerical Descriptive Results 
 
+```{r}
+table1 <- xtabs(~infected + treatment, data=LGBTQ)
+rowPerc(table1)
+colPerc(table1)
+```
+
+The most important information: among the LGBTQ who contracted covid19 13.88% of them took the placebo, while 86.67% of them took the vaccine. A handful of the LGBTQ who got covid took the placebo, therefore the vaccine seems to be working among the LGBTQ.
+
 #### Inferential Results 
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+lgbtqfisher<-fisher.test(table1)
+lgbtqfisher
+```
+
+The observed counts table shows the actual number of LGBTQ who got covid and who didn't. Also the p-value is small meaning there is a statistical difference in the effect of the placebo and vaccine among LGBTQ in preventing the infection. LGBTQ who took the placebo are about 2 times more likely to contract covid than those who took the vaccine based on the odds ratio value.
 
 #### Efficacy of vaccine for lgbtq
 
+```{r}
+EfficacyLGBTQ<- ((0.1465164 /(1+0.1465164 )*100) )
+lgbtqfisherlow<- lgbtqfisher$conf.int[1]
+lgbtqfisherhigh<- lgbtqfisher$conf.int[2]
+EfficacyLGBTQlow<-(lgbtqfisherlow/(1+lgbtqfisherlow)*100)
+EfficacyLGBTQhigh<-(lgbtqfisherhigh/(1+lgbtqfisherhigh)*100)
+EfficacyLGBTQ
+```
 
+Estimated efficacy of the vaccine among females. The 95% confidence interval of the vaccine efficacy among females from `r EfficacyLGBTQlow` to `r EfficacyLGBTQhigh`
 
 ## Druggies
 
