--- a/Final.rmd
+++ b/Final.rmd
@@ -202,12 +202,54 @@ Estimated efficacy of the vaccine among females. The 95% confidence interval of 
 
 #### Graphical Descriptive Results
 
+```{r}
+dd2 <- DrugUsers %>% group_by(infected,treatment) %>% summarize(count=n()) %>% mutate(prcnt=count/sum(count))
+
+
+# the group_by followed by summarize(count=n())
+
+basicC <- ggplot(dd2,aes(x=infected,y=count,fill=treatment))
+basicC + geom_bar(stat="identity",position="dodge")
+
+#Now for percentage plot
+
+basicCC <- ggplot(dd2,aes(x=infected,y=prcnt*100,fill=treatment)) 
+basicCC + geom_bar(stat="identity", position = "dodge")
+```
+
+The bar plots above show graphical descriptive summaries of the effects of two treatments (covid19 vaccine and placebo) on DrugUsers. At first glance, the vaccine appears to not be working among LGBTQ as the two plots show that less DrugUsers people did not take the placebo, yet a few did get covid.
+
 #### Numerical Descriptive Results 
 
-#### Inferential Results 
+```{r}
+table1 <- xtabs(~infected + treatment, data=DrugUsers)
+rowPerc(table1)
+colPerc(table1)
+```
+
+The most important information: among the DrugUser who contracted covid19 15.00% of them took the placebo, while 85.00% of them took the vaccine. A handful of the DrugUser who got covid did not take the placebo, therefore the vaccine seems to be working among the DrugUser.
+
+#### Inferential Results
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+druguserfisher<-fisher.test(table1)
+druguserfisher
+```
+
+The observed counts table shows the actual number of DrugUser who got covid and who didn't. Also the p-value is small meaning there is a statistical difference in the effect of the placebo and vaccine among LGBTQ in preventing the infection. DrugUser who took the placebo are about 2 times more likely to contract covid than those who took the vaccine based on the odds ratio value.
+
 
 #### Efficacy of vaccine for druggies
 
+```{r}
+EfficacyDrugUser<- ((0.1775019 /(1+0.1775019 )*100) )
+druguserfisherlow<- druguserfisher$conf.int[1]
+druguserfisherhigh<- druguserfisher$conf.int[2]
+EfficacyDrugUserlow<-(druguserfisherlow/(1+druguserfisherlow)*100)
+EfficacyDrugUserhigh<-(druguserfisherhigh/(1+druguserfisherhigh)*100)
+EfficacyDrugUser
+```
 
-
-
+Estimated efficacy of the vaccine among females. The 95% confidence interval of the vaccine efficacy among females from `r EfficacyDrugUserlow` to `r EfficacyDrugUserhigh`
